--- a/covid19.html
+++ b/covid19.html
@@ -80,7 +80,12 @@
 
 </head>
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJG6GSM9"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div id="fh5co-wrapper">
     <div id="fh5co-page">
         <div id="fh5co-header">
